# medLearnBackend

./: .gitignore  db.sqlite3  pyproject.toml
administrator/: serializers.py  urls.py  views.py
core/: models.py  moodle.py  serializers.py  urls.py  validators.py  views.py
core/migrations/: 0001_initial.py  0002_alter_user_moodle_user_id.py  0002_remove_user_phone_number.py  0003_alter_user_is_active.py  0003_alter_user_scfhs_id.py
course/: models.py  moodle.py  permissions.py  serializers.py  urls.py  views.py
course/migrations/: 0001_initial.py  0002_alter_course_course_id.py  0002_order.py  0003_cart_cartitem.py  0004_remove_cartitem_quantity_remove_order_quantity.py  0005_order_status.py  0006_order_complaint_order_complaint_status_and_more.py
educators/: models.py  serializers.py  urls.py  views.py
educators/migrations/: 0001_initial.py
medLearn/: asgi.py  settings.py  urls.py  wsgi.py
